feat(be): enhanced index options support including collation, default language, and weights for text indexes
